fix problems with pinned tabs and tab animations; allow moving all selected tabs with ctrl+shift+pg up/down: (miscMods.uc.js); fix some font inconsistencies.

--- a/resources/in-content/devtools.css
+++ b/resources/in-content/devtools.css
@@ -421,6 +421,13 @@ and a few elements like checkboxes */
         color: var(--ui-text-80) !important;
     }
 
+    #ContentSelectDropdown > menupopup > menuitem[disabled="true"],
+    menupopup.in-menulist > menuitem[disabled="true"] {
+        appearance: none !important;
+        color: var(--panel-disabled-color) !important;
+        background-color: initial !important;
+    }
+
     menupopup.in-menulist {
         appearance: none !important;
         border: none !important;
@@ -505,8 +512,10 @@ and a few elements like checkboxes */
     menupopup[menu-api] menuitem:is([type="checkbox"], [type="radio"]) .menu-iconic-left {
         display: none !important;
     }
-    
-    #style-editor-chrome-window .stylesheet-name label:is([value^="uc-"], [value^="userChrome"], [value^="userContent"]),
+
+    #style-editor-chrome-window
+        .stylesheet-name
+        label:is([value^="uc-"], [value^="userChrome"], [value^="userContent"]),
     #style-editor-chrome-window .stylesheet-name label:is([value^="ext-"], [value^="site-"]),
     #style-editor-chrome-window
         .stylesheet-name
@@ -517,14 +526,14 @@ and a few elements like checkboxes */
 
     @supports -moz-bool-pref("userChrome.css.mac-ui-fonts") {
         menupopup {
-            font-family: SF Pro, Segoe UI, sans-serif !important;
+            font-family: SF Pro Text, Segoe UI, sans-serif !important;
             font-kerning: normal !important;
         }
 
         :is(#ContentSelectDropdown, menupopup.in-menulist, .contentSelectDropdown-ingroup)
             :is(menu, menuitem, menucaption)
             > :is(label, .menu-iconic-text, .menu-text) {
-            font-family: SF Pro, Segoe UI, sans-serif !important;
+            font-family: SF Pro Text, Segoe UI, sans-serif !important;
             font-kerning: normal !important;
         }
     }
