--- a/userChrome.as.css
+++ b/userChrome.as.css
@@ -24,6 +24,7 @@ tooltip[default][page] > description {
     border-radius: var(--tooltip-border-radius) !important;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2) !important;
     padding: 2px 6px 4px 6px !important;
+    margin: 0 !important;
 }
 
 @-moz-document url(chrome://browser/content/browser.xhtml)
@@ -32,6 +33,10 @@ tooltip[default][page] > description {
         tooltip[default][page] {
             font-family: SF Pro Text, Segoe UI, sans-serif !important;
             font-kerning: normal !important;
+        }
+
+        tooltip[default][page] > description {
+            padding: 3px 6px 4px 6px !important;
         }
     }
 }
