--- a/userChrome.au.css
+++ b/userChrome.au.css
@@ -75,19 +75,19 @@ menupopup::part(arrowscrollbox-scrollbox) {
 
 /* focused buttons to look like hovered buttons */
 panelview
-    :is(.toolbarbutton-1, toolbarbutton.subviewbutton, .navigable.subviewbutton):not([disabled], [open]):focus,
-.widget-overflow-list .toolbarbutton-1:not([disabled], [open]):focus,
+    :is(.toolbarbutton-1, toolbarbutton.subviewbutton, .navigable.subviewbutton):not([disabled], [open]):focus-visible,
+.widget-overflow-list .toolbarbutton-1:not([disabled], [open]):focus-visible,
 .toolbaritem-combined-buttons:is(:not([cui-areatype="toolbar"]), [overflowedItem="true"])
-    > toolbarbutton:not([disabled], [open]):focus {
+    > toolbarbutton:not([disabled], [open]):focus-visible {
     background-color: var(--panelview-toolbarbutton-hover-bgcolor);
     color: var(--panelview-toolbarbutton-hover-color);
 }
 
 panelview
-    :is(.toolbarbutton-1, toolbarbutton.subviewbutton, .navigable.subviewbutton):not([disabled], [open]):focus:active,
-.widget-overflow-list .toolbarbutton-1:not([disabled], [open]):focus:active,
+    :is(.toolbarbutton-1, toolbarbutton.subviewbutton, .navigable.subviewbutton):not([disabled], [open]):focus-visible:active,
+.widget-overflow-list .toolbarbutton-1:not([disabled], [open]):focus-visible:active,
 .toolbaritem-combined-buttons:is(:not([cui-areatype="toolbar"]), [overflowedItem="true"])
-    > toolbarbutton:not([disabled], [open]):focus:active {
+    > toolbarbutton:not([disabled], [open]):focus-visible:active {
     background-color: var(--panelview-toolbarbutton-active-bgcolor);
     color: var(--panelview-toolbarbutton-active-color);
 }
@@ -137,6 +137,98 @@ menupopup::part(arrowscrollbox),
 #tabbrowser-arrowscrollbox::part(overflow-start-indicator),
 #tabbrowser-arrowscrollbox::part(overflow-end-indicator) {
     visibility: collapse;
+}
+
+
+/* make unpinned tabs stretch to fill the whole tab bar */
+.tabbrowser-tab[fadein]:not([style*="max-width"]) {
+    max-width: 100vw;
+}
+
+/* much better general tab animations.
+tab starts at 0 flex but instantly gets 100 flex as fadein attribute gets applied.
+by transitioning this property we can make the instantaneous change happen more slowly,
+causing the tab to grow over 300ms from the time it's born.
+this way we don't animate tabs that were simply moved rather than created */
+#tabbrowser-tabs:not([movingtab]) .tabbrowser-tab:not([pinned], [justmoved], [tab-grouping], [tabdrop-samewindow]) {
+	-moz-box-flex: 0;
+    transition: min-width 200ms ease-out,
+        max-width 150ms ease-out,
+        -moz-box-flex 300ms var(--uc-smooth-timing-function);
+}
+
+#tabbrowser-tabs:not([movingtab]) .tabbrowser-tab[fadein]:not([pinned], [justmoved]) {
+    -moz-box-flex: 100;
+}
+
+/* if the final tab is pinned, it should stretch to fill the rest of the tab bar.
+instead of shrinking it, we add a little pin icon before the tab label to show it's pinned.
+since this only occurs when it's the final tab, it needs to animate its width when it's closed,
+or when a new tab is opened after it, etc. so we use the same kind of animation but a bit slower,
+since it needs to animate a much greater distance than normal tabs.
+this is the animation that plays when the pinned last-visible-tab shrinks, e.g. when it's no longer last-visible-tab. */
+.tabbrowser-tab[pinned]:not([justmoved], [tab-grouping], [tabdrop-samewindow]) {
+    transition: min-width 300ms var(--animation-easing-function),
+        max-width 300ms var(--animation-easing-function),
+        -moz-box-flex 300ms var(--animation-easing-function);
+    width: 0;
+}
+
+/* shrink pinned tabs */
+.tabbrowser-tab[pinned]:not([last-visible-tab]),
+#tabbrowser-tabs[movingtab] .tabbrowser-tab[pinned],
+.tabbrowser-tab[pinned]:is([justmoved], [tab-grouping], [tabdrop-samewindow]) {
+    min-width: var(--pinned-tab-width);
+    max-width: var(--pinned-tab-width);
+}
+
+/* make the label disappear on pinned tabs, but in a way that it can still be shown and animated on a pinned tab if it's [last-visible-tab]
+opacity fades to 0 and the label shrinks slightly to 96% to create the illusion that the whole tab is shrinking. */
+.tabbrowser-tab[pinned] .tab-label-container {
+    width: auto;
+    margin-inline-start: 5.5px;
+    transition: opacity 200ms ease-out, transform 100ms ease-out;
+    opacity: 0;
+    transform: scale(0.96);
+    transform-origin: left center;
+}
+
+/* this is the animation that plays when the pinned last-visible-tab grows, e.g. when it becomes last-visible-tab */
+#tabbrowser-tabs:not([movingtab]) .tabbrowser-tab[pinned][last-visible-tab]:not([justmoved], [tab-grouping], [tabdrop-samewindow]) {
+    -moz-box-flex: 100;
+    transition: min-width 300ms var(--uc-smooth-timing-function),
+        max-width 300ms var(--uc-smooth-timing-function),
+        -moz-box-flex 300ms var(--uc-smooth-timing-function);
+}
+
+/* orient the tab label horizontally so it can accommodate an icon */
+.tabbrowser-tab[pinned] .tab-label {
+    flex-wrap: nowrap;
+    display: flex;
+    -moz-box-orient: horizontal;
+    line-height: 16px;
+}
+
+/* pinned tab icon. it's technically present on all pinned tabs,
+but it's only visible on the last-visible-tab since there's no room in the tiny tab to show the label at all.
+this is intentional since we want to animate the opacity of the label when the last-visible-tab grows/shrinks into an ordinary pinned tab.
+if the icon disappeared/appeared instantly it would disrupt the impression that the tab is growing/shrinking gradually. */
+.tabbrowser-tab[pinned] .tab-label::before {
+    display: -moz-box;
+    content: "";
+    margin-right: 2px;
+    background: url(chrome://userchrome/content/skin/pin-tab.svg) no-repeat center/12px;
+    -moz-context-properties: fill, fill-opacity;
+    fill: currentColor;
+    width: 16px;
+    height: 16px;
+}
+
+/* label becomes visible on last-visible-tab, opacity and transform are the animated properties. */
+.tabbrowser-tab[pinned][last-visible-tab]
+    .tab-label-container {
+    opacity: 1;
+    transform: none;
 }
 
 /* devtools highlighter */
